I fixed the link the bteween the stylesheet and the html page and changed the spacing of the flex-items in of the welcome section

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -75,8 +75,9 @@
 
 #welcome {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  column-gap: 20px;
   height: 100vh;
   background-color: #1f2937;
   color: white;
@@ -91,14 +92,13 @@
 
 #welcome article { 
   font-size: 18px;
+  margin: 0;
 }
 
 
 #welcome.welcome-img, article {
   width: 300px;
-  height: 300px;
-  flex-grow: 1;
-  margin-left: 9px;    
+  height: 300px;    
 }
 
 
